<resources>
    <string name="app_name">Location</string>
    <string name="header">Categories</string>
    <string name="card1">Car Rent</string>
    <string name="card2">Restaurant</string>
    <string name="card3">Hospital</string>
    <string name="card4">Shop</string>
    <string name="card1Content">Expand All</string>
    <string name="title_activity_maps">maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appwidget_text">Place</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is app widget</string>
    <string name="login_description">Please input your username and password</string>
    <string name="login_title">Welcome to Location Reference!</string>
    <string name="show_author">want to display the author?</string>
    <string name="show">Show</string>
</resources>