<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".category"
    android:id="@+id/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textSize="22sp"
                android:textColor="#CE000000"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_language_24"
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:id="@+id/laguage"/>

        </RelativeLayout>

        <!-- Card 1 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="190dp">

            <RelativeLayout
                android:id="@+id/car"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_bk2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:padding="20dp"
                    android:text="@string/card1"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:id="@+id/card1_title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:padding="15sp"
                    android:text="@string/card1Content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-35dp"
                android:src="@drawable/categories_rent_car_icon" />

        </RelativeLayout>

        <!-- Card 2 -->
        <androidx.cardview.widget.CardView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="12dp"
            android:id="@+id/food">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/food_back">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_restaurant_icon"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card2"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-black"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15sp"
                    android:text="@string/card1Content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!-- Card 3 -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/round_bk3"
                android:layout_margin="20dp"
                android:id="@+id/hospital">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card3"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15sp"
                    android:text="@string/card1Content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="-15dp"
                android:src="@drawable/hospital_image"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <!-- Card 4 -->
        <androidx.cardview.widget.CardView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/merah"
                android:id="@+id/shop">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/categories_shop_icon"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card4"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:padding="20dp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-black"
                    android:layout_alignParentRight="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15sp"
                    android:text="@string/card1Content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>